projects_revision_august

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Portfolio
 ---
 
 <main id="portfolio">
-	<h1 class="page-header">Portfolio</h1>
+	<h1 class="page-header">Recent Projects</h1>
 	<section>
 		<ul id="portfolio-gallery">
 			{% for project in site.projects %}
